# clearpath_ros2_socketcan_interface-release

./: .clang-format  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
debian/: changelog  control  copyright  gbp.conf  rules
include/clearpath_ros2_socketcan_interface/: socketcan_interface.hpp  visibility_control.h
launch/: receiver.launch.py  sender.launch.py
rpm/: ros-jazzy-clearpath-ros2-socketcan-interface.spec  template.spec
scripts/: activate_lifecycle
src/: socketcan_interface.cpp
